--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="states.js"></script>
     <script src="customers.js"></script>
     <script src="main.js" defer></script>
-    <link rel="stylesheet" href="stylesheet.css"> 
+    <script src="https://momentjs.com/downloads/moment.js"></script>
+    <link rel="stylesheet" href="style.css"> 
     <title>I Wish This Was A Dog Database 🐶 </title>
 
 </head>
